Align properties of css vertically

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <label><input type="radio" name="openbrace" id="openbrace-separate-line" onChange='format()'>separate line</label>
         </p>
         <p><label><input checked type="checkbox" name="autosemicolon" id="autosemicolon" onChange='format()'>Automatic semicolon</label></p>
+        <p><label><input type="checkbox" name="alignProperties" id="alignProperties" onChange='format()'>Align properties</label></p>
     </div>
 
     <br clear="all"/>
